🔨 add: custom error handler

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,7 @@ springdoc:
     try-it-out-enabled: true
     tags-sorter: alpha
     filter: true
+
+server:
+  error:
+    include-stacktrace: never
